# external_openssl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile-amd64_linux_clang  Makefile-amd64_linux_gcc  Makefile-android_armeabi_gcc  Makefile-ios_i386_clang  Makefile-linux_amd64_clang  Makefile-linux_amd64_gcc  Makefile-linux_armv6rpi_gcc  Makefile-linux_i386_gcc  Makefile-macosx_amd64_clang  Makefile-windows_amd64_msvc  Makefile-windows_i386_msvc  README.md  appveyor.yml  lookaside.txt
resources/: Makefile-alpine_amd64_gcc  Makefile-android_armeabi_gcc  Makefile-android_i386_gcc  Makefile-ios_i386_clang  Makefile-linux_amd64_clang  Makefile-linux_amd64_gcc  Makefile-linux_armcortexa7_gcc  Makefile-linux_armv6rpi_gcc  Makefile-linux_i386_gcc  Makefile-macosx_amd64_clang  Makefile-windows_amd64_msvc  Makefile-windows_i386_msvc  macros.cmake
resources/openssl_101e_cmake/: CMakeLists.txt
resources/openssl_101e_cmake/include_android_armeabi_gcc/: buildinf.h
resources/openssl_101e_cmake/include_android_i386_gcc/: buildinf.h  opensslconf.h
resources/openssl_101e_cmake/include_linux_amd64_gcc/: buildinf.h  opensslconf.h
resources/openssl_101e_cmake/include_windows_amd64_msvc/: buildinf.h  opensslconf.h
resources/openssl_101e_cmake/include_windows_i386_msvc/: buildinf.h  opensslconf.h
resources/openssl_cmake/: CMakeLists.txt
resources/openssl_cmake/include_android_armeabi_gcc/: opensslconf.h
resources/openssl_cmake/include_linux_amd64_gcc/: buildinf.h  opensslconf.h
resources/openssl_cmake/include_macosx_amd64_clang/: buildinf.h  opensslconf.h
resources/openssl_cmake/include_windows_amd64_msvc/: buildinf.h  opensslconf.h
resources/openssl_cmake/include_windows_i386_msvc/: buildinf.h  opensslconf.h
resources/preconfigured/: copy-headers.bat  create-symlinks.sh  opensslconf-alpine_amd64_gcc.h  opensslconf-android_armeabi_gcc.h  opensslconf-ios_i386_clang.h  opensslconf-linux_amd64_gcc.h  opensslconf-linux_armv6rpi_gcc.h  opensslconf-macosx_amd64_clang.h
resources/windows/: VC-32.pl.in  masm_102_3650.patch
test/: CMakeLists.txt  openssl_test.cpp
